# ocr-computing-challenges

./: .gitignore  Makefile  dune-project  flake.nix  input.csv  ocr_computing_challenges.opam
challenge_1/: dune  main.ml
challenge_10/: main.ml
challenge_11/: query.sh
challenge_12/: dune  main.ml  test.toml
challenge_13/: dune  main.ml
challenge_14/: dune  main.ml
challenge_15/: main.ml
challenge_16/: dune  main.ml
challenge_17/: main.ml
challenge_18/: dune  main.ml
challenge_19/: LICENSE  challenge19.cabal
challenge_19/app/: Main.hs
challenge_2/: dune  generate_input.sh  input.csv  main.ml
challenge_20/: challenge20.cabal
challenge_20/app/: Main.hs
challenge_21/: challenge21.cabal
challenge_21/app/: Main.hs
challenge_22/: challenge22.cabal
challenge_22/app/: Main.hs
challenge_23/: challenge23.cabal
challenge_23/app/: Main.hs
challenge_3/: main.ml
challenge_4/: animals.json  dune  main.ml
challenge_5/: dune  main.ml
challenge_6/: dune  main.ml
challenge_6_lib/: challenge_6_lib.ml  dune
challenge_7/: main.ml
challenge_8/: dune  main.ml
challenge_9/: main.ml
