cabal-version:      3.0
name:               challenge20
version:            0.1.0.0
author:             Alan Randon
maintainer:         alan.randon@outlook.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable challenge20
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        array ^>= 0.5.6.0
    hs-source-dirs:   app
    default-language: Haskell2010
