cabal-version: 3.0
name: challenge22
version: 0.1.0.0
author: Alan Randon
maintainer: alan.randon@outlook.com
build-type: Simple

common warnings
  ghc-options: -Wall

executable challenge22
  import: warnings
  main-is: Main.hs
  build-depends:
    base ^>=4.18.2.1

  hs-source-dirs: app
  default-language: Haskell2010
